# EasyDraft

./: CMakeLists.txt  ExportDoc.py  KZip.cpp  Makefile  README.md  TemplateParser.cpp  TemplateParser.h  TemplateParser.hpp  Tests.cpp  ViewDocx.py  WatermarkDoc.py  cloud.hpp  complex.docx  config.cpp  config.hpp  config.json  credentials.json  customfilesystemmodel.cpp  customfilesystemmodel.h  delete_tempate.cpp  drafts.cpp  drafts.hpp  file_operations.cpp  file_operations.h  file_operations.hpp  findPlaceholders.py  gmail.py  google_drive.py  helpdialog.cpp  helpdialog.h  log.hpp  mail.hpp  main.cpp  mainGUI.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modify_docx.py  onedrive.py  other_makefile.txt  (+27 more)
.github/workflows/: cmake-macos.yml
KZip/: KZip.hpp
example_docx/: CS307 Charter.docx  CS307 Homework 2 Team 37.docx  Design Document Team 37.docx  Team 37 - Sprint #1 - Planning Document.docx
